--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
             </ul>
         </nav>
     </div>
-        <div class="head-text">
+    <div class="parent">
+        <div class="profile child">
+            <img src="./newwwwww.jpeg" >
+        </div>
+        <div class="head-text child">
             <p>Civil Engineer</p>
             <h1>Hi, I'm <span> Shaikh Noman </span> <br>From Maharashtra, India.</h1>
         </div>
+    </div>
     </div>
   </div>  
   <!-- about -->
@@ -33,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="col-1">
-                <img src="./istockphoto-1067600766-612x612.jpg" alt="">
+                <img src="./engineer-4940823_640.jpg" alt="">
             </div>
             <div class="col-2">
                 <h1 class="title">About Me</h1>
